# common-api-runtime

./: .cproject  .project  CMakeLists.txt  CommonAPI.vcxproj  INSTALL  Makefile.am  NEWS  README  Tests.vcxproj  commonapi.spec.in  configure.ac  doxygen.in  project.config
cmake/: CommonAPIConfig.cmake  CommonAPIConfig.cmake.in  CommonAPIConfigVersion.cmake  CommonAPIMacros.cmake
include/CommonAPI/: Address.hpp  Attribute.hpp  AttributeExtension.hpp  ByteBuffer.hpp  CallInfo.hpp  CommonAPI.hpp  Config.hpp  ContainerUtils.hpp  Deployable.hpp  Deployment.hpp  DllExportMacro.hpp  Enumeration.hpp  Event.hpp  Export.hpp  Factory.hpp  IniFileReader.hpp  InputStream.hpp  Logger.hpp  MainLoopContext.hpp  OutputStream.hpp  Proxy.hpp  ProxyManager.hpp  Runtime.hpp  SelectiveEvent.hpp  SerializableArguments.hpp  Struct.hpp  Stub.hpp  TypeOutputStream.hpp  Types.hpp  Utils.hpp  Variant.hpp  Version.hpp
src/CommonAPI/: Address.cpp  Address.h  Attribute.h  AttributeExtension.h  CMakeLists.txt  CommonAPI.h  Configuration.h  ContainerUtils.cpp  DBusTypeOutputStream.h  Deployable.h  Deployment.cpp  Deployment.h  Event.h  Factory.cpp  Factory.h  IniFileReader.cpp  IniFileReader.h  InputStream.h  Logger.cpp  Logger.h  MainLoopContext.cpp  MainLoopContext.h  MiddlewareInfo.h  OutputStream.h  Proxy.cpp  Proxy.h  ProxyManager.cpp  Runtime.cpp  Runtime.h  SelectiveEvent.h  Serializable.h  SerializableArguments.h  SerializableStruct.h  SerializableVariant.h  SerializableVariant.hpp  Struct.h  Stub.h  TypeOutputStream.h  Types.cpp  Types.h  (+5 more)
src/test/: CMakeLists.txt  VariantTest.cpp
