cmake_minimum_required (VERSION 2.8.1)
file(GLOB CAPI_SRCS "*.cpp")
add_library(CommonAPI ${CAPI_SRCS})
target_link_libraries(CommonAPI ${DL_LIBRARY})
set_target_properties(CommonAPI PROPERTIES VERSION ${LIB_MAJOR_VERSION}.${LIB_MINOR_VERSION}.${LIB_PATCH_VERSION} SOVERSION ${LIB_MAJOR_VERSION} LINKER_LANGUAGE C)

install(TARGETS CommonAPI LIBRARY DESTINATION lib 	ARCHIVE DESTINATION lib/static	COMPONENT base)	

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Attribute.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/AttributeExtension.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/CommonAPI.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ByteBuffer.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Configuration.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ContainerUtils.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Event.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.hpp DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/InputStream.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/MainLoopContext.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/OutputStream.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/MiddlewareInfo.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Proxy.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ProxyManager.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Runtime.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SelectiveEvent.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableStruct.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableVariant.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableVariant.hpp DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ServicePublisher.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ServicePublisher.hpp DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Stub.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/types.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/utils.h DESTINATION include/CommonAPI-${COMMONAPI_API_HEADER_VERSION}/CommonAPI)	


