cmake_minimum_required (VERSION 2.8.1)
file(GLOB CAPI_SRCS "*.cpp")
add_library(CommonAPI ${CAPI_SRCS})
target_link_libraries(CommonAPI ${DL_LIBRARY})
set_target_properties(CommonAPI PROPERTIES VERSION ${LIB_MAJOR_VERSION}.${LIB_MINOR_VERSION}.${LIB_PATCH_VERSION} SOVERSION ${LIB_MAJOR_VERSION} LINKER_LANGUAGE C)

install(TARGETS CommonAPI EXPORT CommonAPITargets LIBRARY DESTINATION ${INSTALL_LIB_DIR} ARCHIVE DESTINATION ${INSTALL_LIB_DIR})	

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Attribute.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/AttributeExtension.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/CommonAPI.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ByteBuffer.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Configuration.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ContainerUtils.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Event.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Factory.hpp DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/InputStream.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/MainLoopContext.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/OutputStream.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/MiddlewareInfo.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Proxy.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ProxyManager.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Runtime.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SelectiveEvent.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableStruct.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableVariant.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/SerializableVariant.hpp DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ServicePublisher.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ServicePublisher.hpp DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/Stub.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/types.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/utils.h DESTINATION ${INSTALL_INCLUDE_DIR}/CommonAPI)	
